--- a/package.json
+++ b/package.json
@@ -6,16 +6,17 @@
   "dependencies": {},
   "devDependencies": {
     "browser-sync": "^2.26.7",
-    "del": "^5.0.0",
+    "del": "^5.1.0",
     "gulp": "^4.0.2",
     "gulp-autoprefixer": "^6.1.0",
     "gulp-cached": "^1.1.1",
-    "gulp-changed": "^4.0.0",
+    "gulp-changed": "^4.0.1",
     "gulp-combine-mq": "^0.4.0",
+    "gulp-concat": "^2.6.1",
     "gulp-filter": "^6.0.0",
     "gulp-html-prettify": "0.0.1",
     "gulp-if": "^3.0.0",
-    "gulp-imagemin": "^6.0.0",
+    "gulp-imagemin": "^6.1.0",
     "gulp-jscs": "^4.1.0",
     "gulp-minify": "^3.1.0",
     "gulp-plumber": "^1.2.1",
@@ -25,10 +26,14 @@
     "gulp-rigger": "^0.5.8",
     "gulp-stylus": "^2.7.0",
     "gulp-uglify": "^3.0.2",
+    "gulp-uglify-es": "^1.0.4",
     "gulp-util": "^3.0.8",
     "gulp4-run-sequence": "^0.4.0",
+    "jquery": "^3.4.1",
     "require-dir": "^1.2.0",
-    "rupture": "^0.7.1"
+    "rupture": "^0.7.1",
+    "slick": "^1.12.2",
+    "slick-carousel": "^1.8.1"
   },
   "browsers": {
     "android": 4,
